more accurate analyzing a server endpoint path and an exception handling